--- a/css/style.css
+++ b/css/style.css
@@ -1,12 +1,65 @@
 /* Criado por Vitor Schapieski :D */
-
 html{
     overflow: hidden;
     overflow-y: hidden;
 }
-
 body{
-    background-image: url(/images/9E4l.gif);
+    background-image: url(../images/4e3712a13bb5493898c2cf73a7644ac6.gif);
     background-size: cover;
     background-repeat: no-repeat;
+    background-position: center;
+    display: grid;
+    grid-template-columns: 1fr 80% 1fr;
+    grid-template-rows: 1fr 80% 1fr;
+    width: 95%;
+    height: 100%;
+    padding: 10px;
+    justify-content: center;
+    align-items: center;
+    margin: 0 auto;    
 }
+a{
+    transition: all .6s ease-in-out;
+    cursor: pointer;
+    text-decoration: none;
+    padding: 3%;
+    font-family:'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif ;
+}
+a:hover{
+    background-color: rgba(128, 128, 128, 0.288);
+    border-radius: 22px;
+}
+nav{
+    grid-column: 2/3;
+    grid-row: 1/2;
+    display: flex;
+    justify-content:space-around;
+    flex-wrap: wrap;
+}
+.conteinerInicio, .conteinerQuem, .conteinerProjetos{
+    display: none;
+    width: 100%;
+    height: 100%;
+    grid-column: 2/3;
+    grid-row: 2/3;
+    background-color: rgb(255, 255, 255);
+}
+.conteinerQuem.ativar, .conteinerInicio.ativar, .conteinerProjetos.ativar{
+    display: block;
+}
+.conteinerProjetos.ativar{
+    border-top: 1px solid red;
+}
+.conteinerQuem.ativar{
+    border-top: 1px solid black;
+}
+.conteinerInicio.ativar{
+    border-top: 1px solid blue;
+}
+img{
+    height: 50px;
+    width: 50px;
+    border-radius: 21px;
+}
+
+
