--- a/css/style.css
+++ b/css/style.css
@@ -43,9 +43,11 @@ nav{
     grid-column: 2/3;
     grid-row: 2/3;
     background-color: rgb(255, 255, 255);
+
 }
 .conteinerQuem.ativar, .conteinerInicio.ativar, .conteinerProjetos.ativar{
-    display: block;
+    display: flex;
+    align-items: center;
 }
 .conteinerProjetos.ativar{
     border-top: 1px solid red;
@@ -57,9 +59,22 @@ nav{
     border-top: 1px solid blue;
 }
 img{
-    height: 50px;
-    width: 50px;
+    height: 150px;
+    width: 150px;
     border-radius: 21px;
+    transition: all .6 ;
+}
+img:hover{
+    height: 250px;
+    width: 250px;
+}
+.pageInicio, .pageQuem, .pageProjetos{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.pageInicio{
+    flex-direction:column-reverse;
 }
 
 
