--- a/styles/styles.css
+++ b/styles/styles.css
@@ -61,7 +61,7 @@ main{
     transition: .6s all ease-out;
 }
 .redes img:hover{
-    background-color: rgba(255, 255, 0, 0.904);
+    background-color: rgba(255, 255, 255, 0.904);
 }
 .postsCard{
     margin-bottom: 50px;
@@ -81,20 +81,90 @@ main{
 ::-webkit-scrollbar{
     background-color: transparent;
 }
+.photos{
+    background-color: rgba(247, 240, 240, 0);
+    margin-top: 15px;
+    height: 200px;
+    width: 100%;
+    overflow: auto;
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    gap: 5px;
+    transition: all .4 ease-out;
+    cursor: pointer;
+}
+.miniPhotos{
+    height: 100px;
+    border-radius: 25px;
+    transition: all .4 ease-out;
+    margin: o auto;
+}
+.miniPhotos:hover{
+    height: 150px;
+    transition: all .4 ease-out;
+}
+
 .modal{
     display: none;
-    border-radius: 5px;
+    margin: 0%;
+    padding: 0%;
+    border: 0%;
     position: absolute;
-    height: 0%;
-    top: 5%;
-    left: 25%;
-    background-color: rgba(0, 0, 0, 0.521);
-    padding: 2%;
-    transition: all .4 ease-out;
+    height: 80%;
+    width: 80%;
+    background-color:rgba(0, 0, 0, 0.932);
+    overflow: hidden;
+    top: 10%;
+    left: 10%;
+    right: 10%;
+    bottom: 10%;
+    border-radius: 3px;
+    border: 2px solid white;
+    box-shadow: 10px 10px 1px white;
+    overflow: auto;
+    overflow-x: hidden;
 }
 .modal.ativar{
     display: block;
-    height: 80%;
+}
+.modal span{
+    position: fixed;
+    top: 3%;
+    left: 10%;
+    z-index: 5;
+    padding: 15px;
+    color: red;
+    cursor: pointer;
+}
+.modal span:hover{
+    color: white;
+}
+.modal label{
+    position: relative;
+    font-size: 3em;
+    left: 5%;
+    border-radius: 12px;
+    background-color: rgba(0, 0, 0, 0.767);
+}
+.modalPage{
+    margin: 0 auto;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 25px;
+    width: 100%;
+    height: 100%;
+    margin-top: 15px;
+    padding: 25px;
+}
+.modalPage img{
+    margin: 0 auto;
+    height: 50%;
+    border-radius: 15px;
+}
+::-webkit-scrollbar{
+    background-color:transparent;
+    width: 0px;
 }
 
 @media (max-width: 1000px){
@@ -115,6 +185,19 @@ main{
     .photo:hover{
         height: 400px;
         width: 400px;
+    }
+    .photos{
+        background-color: rgba(255, 255, 255, 0);
+        margin-top: 15px;
+        height: 350px;
+        width: 100%;
+        overflow: auto;
+    }
+    .miniPhotos{
+        height: 150px;
+    }
+    .miniPhotos:hover{
+        height:200px;
     }
 }
 
