--- a/styles/styles.css
+++ b/styles/styles.css
@@ -96,14 +96,14 @@ main{
 }
 .miniPhotos{
     height: 100px;
-    width: 35%;
+    width: 100px;
     border-radius: 25px;
     transition: all .4 ease-out;
     margin: o auto;
 }
 .miniPhotos:hover{
     height: 150px;
-    width: 55%;
+    width: 150px;
     transition: all .4 ease-out;
 }
 
@@ -161,8 +161,8 @@ main{
 }
 .modalPage img{
     margin: 0 auto;
-    height: 50%;
-    width: 25%;
+    height: 250px;
+    width: 250px;
     border-radius: 15px;
 }
 ::-webkit-scrollbar{
@@ -197,10 +197,16 @@ main{
         overflow: auto;
     }
     .miniPhotos{
-        height: 150px;
+        height: 250px;
+        width: 250px;
     }
     .miniPhotos:hover{
-        height:200px;
+        height:300px;
+        width: 300px;
+    }
+    .modalPage img{
+        width: 200px;
+        height: 200px;
     }
 }
 
