--- a/styles/styles.css
+++ b/styles/styles.css
@@ -211,3 +211,21 @@ main{
 }
 
 /*Te amo Mae*/
+/*
+    <div class="modal">
+        <span class="fechar">Fechar</span>
+        <label>Boas Memórias</label>
+        <div class="modalPage">
+            <img src="./images/photo6.jpg" alt="">
+            <img src="./images/photo7.jpg" alt="">
+            <img src="./images/photo8.jpg" alt="">
+            <img src="./images/photo9.jpg" alt="">
+            <img src="./images/photo10.jpg" alt="">
+            <img src="./images/photo11.jpg" alt="">
+            <img src="./images/photo12.jpg" alt="">
+            <img src="./images/photo13.jpg" alt="">
+            <img src="./images/photo14.jpg" alt="">
+
+        </div>
+    </div>
+*/
