--- a/styles/styles.css
+++ b/styles/styles.css
@@ -37,6 +37,7 @@ main{
     background-color: rgba(128, 128, 128, 0.068);
     border-left: 1px solid rgba(255, 255, 255, 0.664);
     transition: .6s all ease-out;
+    position: relative;
 }
 .photo{
     width: 100px;
@@ -107,68 +108,38 @@ main{
     transition: all .4 ease-out;
 }
 
-.modal{
-    display: none;
-    margin: 0%;
-    padding: 0%;
-    border: 0%;
-    position: absolute;
-    height: 80%;
-    width: 80%;
-    background-color:rgba(0, 0, 0, 0.932);
-    overflow: hidden;
-    top: 10%;
-    left: 10%;
-    right: 10%;
-    bottom: 10%;
-    border-radius: 3px;
-    border: 2px solid white;
-    box-shadow: 10px 10px 1px white;
-    overflow: auto;
-    overflow-x: hidden;
-}
-.modal.ativar{
-    display: block;
-}
-.modal span{
-    position: fixed;
-    top: 3%;
-    left: 10%;
-    z-index: 5;
-    padding: 15px;
-    color: red;
-    cursor: pointer;
-}
-.modal span:hover{
-    color: white;
-}
-.modal label{
-    position: relative;
-    font-size: 3em;
-    left: 5%;
-    border-radius: 12px;
-    background-color: rgba(0, 0, 0, 0.767);
-}
-.modalPage{
-    margin: 0 auto;
-    display: flex;
-    flex-wrap: wrap;
-    gap: 25px;
-    width: 100%;
-    height: 100%;
-    margin-top: 15px;
-    padding: 25px;
-}
-.modalPage img{
-    margin: 0 auto;
-    height: 250px;
-    width: 250px;
-    border-radius: 15px;
-}
 ::-webkit-scrollbar{
     background-color:transparent;
     width: 0px;
 }
+.skills{
+    cursor: pointer;
+    animation: animacao 1s infinite ;
+    
+}
+.skills:hover{
+    animation: none;
+}
+.skill.ativar{
+    background-color: #010211;
+}
+.Posts.ativar{
+    display: none;
+}
+
+
+@keyframes animacao{
+    0%{
+        opacity: 0;
+    }
+    50%{
+        opacity: .7;
+    }
+    100%{
+        opacity: 0;
+    }
+}
+
 
 @media (max-width: 1000px){
     body{
